issues with tests fixed, added postman-collection, added limits for POST and DELETE endpoints in free-books-service